Fixed gaps and whitespaces, Fixed opinions-tooltips, Fixed fonts

--- a/includes/css/stylesheet.css
+++ b/includes/css/stylesheet.css
@@ -41,12 +41,13 @@
 
 body {
   position: relative;
-  font-family: "almoni-regular","Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #4D4D4D;
+  font-family: "almoni-regular";
   direction: rtl;
 }
 
 header {
-  height: 150px;
+  height: 200px;
 }
 
 footer {
@@ -82,17 +83,16 @@ a {
 }
 
 #title {
-  height: 78px;
-  line-height: 78px;
+  height: 108px;
+  line-height: 108px;
   border-top: 2px solid grey;
-  font-weight: bold;
-  font-size: 87px;
+  font-size: 90px;
 }
 
 #subtitle {
-  height: 29px;
+  height: 49px;
   border-bottom: 1px solid grey;
-  font-size: 26px;
+  font-size: 29px;
 }
 
 #question {
@@ -110,51 +110,47 @@ a {
   display: none;
   position: absolute;
   top: 0px;
-  height: 148px;
   z-index: 10;
 }
 
 #event-tooltip {
+  height: 200px;
   background-color: #4D4D4D;
-  padding:10px;
   color: white;
 }
 
-#event-tooltip #title, #event-tooltip #details {
+#event-tooltip #event-title, #event-tooltip #event-details {
   position: absolute;
   right: 0px;
   width: 500px;
 }
 
-#event-tooltip #title {
-  height: 48px;
-  line-height: 48px;
-  background-color: #4D4D4D;
+#event-tooltip #event-title {
+  height: 50px;
+  line-height: 50px;
   font-weight: bold;
   font-size: 25px;
 }
 
-#event-tooltip #details {
+#event-tooltip #event-details {
   top:50px;
-  height: 100px;
+  height: 150px;
   text-align: right;
-  background-color: #4D4D4D;
 }
 
 #event-tooltip img {
   position: absolute;
-  left: 100px;
+  left: 0px;
   width: 450px;
-  height: 148px;
-  background-color: #4D4D4D;
-  border: 5px #333333;
+  height: 150px;
 }
 
 
 #opinions-tooltip {
+  height: 196px;
+  color: #A2A2A2;
   background-color: #F4F4F4;
-  border: 5px #666666;
-  color: black;
+  border: 2px solid #E6E6E6;
 }
 
 #opinions-tooltip #date-container, #opinions-tooltip #opinions-container {
@@ -162,17 +158,16 @@ a {
 }
 
 #opinions-tooltip #date-container {
-  height: 73px;
-  line-height: 73px;
-  color: grey;
-  font-size: 60px;
+  height: 97px;
+  line-height: 97px;
+  font-size: 80px;
   font-weight: bolder;
-  border-bottom: 1px solid grey;
+  border-bottom: 1px solid #E3E3E3;
 }
 
-#opinions-tooltip #opinions {
-  top: 75px;
-  height: 74px;
+#opinions-tooltip #opinions-container {
+  top: 100px;
+  height: 98px;
 }
 
 .opinion, .opinion-color {
@@ -181,8 +176,8 @@ a {
 
 .opinion {
   position: relative;
-  top: 17px;
-  height: 40px;
+  top: 25px;
+  height: 50px;
   display: inline-block;
 }
 
@@ -192,6 +187,7 @@ a {
 
 .opinion-text, .opinion-percentage {
   top: 0px;
+  font-size: 21px;
 }
 
 .opinion-text {
@@ -219,12 +215,13 @@ a {
 #data-vis {
   position: relative;
   width: 1200px;
+  margin-top: 30px;
   overflow: hidden;
 }
 
 #data-vis svg {
   position: absolute;
-  right: 0px;
+  right: -188px;
 }
 
 #scroll-old, #scroll-new, #scroll-old div, #scroll-new div {
@@ -234,7 +231,7 @@ a {
 #scroll-old, #scroll-new {
   position: absolute;
   bottom: 19px;
-  width: 50px;
+  width: 40px;
   background-color: white;
   z-index: 10;
 }
@@ -268,7 +265,7 @@ a {
 }
 
 #scroll-old div img {
-  background: url(../imgs/Left-Arrow-.png) no-repeat;
+  background: url(../imgs/Left-Arrow.png) no-repeat;
   left: 5px;
 }
 
@@ -285,7 +282,13 @@ a {
   fill: none;
   stroke: #808080;
   stroke-width: 2;
-  shape-rendering: crispEdges;
+  shape-rendering: crispEdges;  
+}
+
+.axis text {
+  font-family: "almoni-regular";
+  font-size:35px;
+  stroke-opacity: 0;
 }
 
 .month {
@@ -315,18 +318,19 @@ a {
 }
 
 #gradient-map{
-  right: 50px;
+  right: 40px;
   width: 500px;
 }
 
 #solid-map {
-  left: 50px;
+  left: 40px;
   width: 125px;
 }
 
 #support, #oppose, #avoid {
   position: absolute;
   top: 0px;
+  font-size: 22px;
 }
 
 #support {
@@ -388,9 +392,9 @@ a {
 }
 
 #authors {
-  right: 0px;
+  right: 15px;
 }
 
 #reference {
-  left: 0px;
+  left: 15px;
 }
